@@ -1,5 +1,7 @@
 *SVN*
 
+* Don't mistakenly interpret the request uri as the query string.  #8731 [lifofifo, Jeremy Kemper]
+
 * Make ActionView#view_paths an attr_accessor for real this time.  Also, don't perform an unnecessary #compact on the @view_paths array in #initialize.  Closes #8582 [dasil003, julik, rick]
 
 * Tolerate missing content type on multipart file uploads. Fix for Safari 3.  [Jeremy Kemper]
